Add MUI ThemeProvider and theme with contact form and meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/image/profile/profileimage.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Muhammad Sharjeel Baig - Fullstack Developer" />
+    <meta name="keywords" content="Fullstack, Developer, JavaScript, TypeScript, React, Node.js, Express, Karachi, Pakistan" />
+    <meta name="author" content="Muhammad Sharjeel Baig" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Muhammad Sharjeel Baig - Fullstack Developer" />
+    <meta property="og:description" content="Experienced Fullstack Developer proficient in JavaScript, TypeScript, React, Node.js, Express, and MongoDB." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sharjeelbaig.github.io/" />
+    <meta property="og:image" content="https://sharjeelbaig.github.io/assets/images/profile/sharjeel.png" />
+    <title>Muhammad Sharjeel Baig</title>
   </head>
   <body>
     <div id="root"></div>
